--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@storybook/react": "^6.2.9",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
+    "apollo-server": "^2.24.1",
     "babel-loader": "^8.1.0",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -30,6 +31,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-redux-saga": "^1.2.1",
     "file-loader": "^6.0.0",
+    "graphql": "^15.5.0",
+    "mongoose": "^5.12.10",
     "nodemon": "^2.0.4",
     "prettier": "^2.3.0",
     "resolve-url-loader": "^3.1.1",
