--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server/index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -19,6 +20,7 @@
     "@typescript-eslint/parser": "^4.23.0",
     "apollo-server": "^2.24.1",
     "babel-loader": "^8.1.0",
+    "bcryptjs": "^2.4.3",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -32,8 +34,9 @@
     "eslint-plugin-redux-saga": "^1.2.1",
     "file-loader": "^6.0.0",
     "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
     "resolve-url-loader": "^3.1.1",
     "sass": "^1.26.10",
