--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server/index",
+    "start:dev": "webpack-dev-server",
     "dev": "webpack -d --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -47,7 +48,8 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
     "webpack": "^4.44.1",
-    "webpack-cli": "^4.7.0"
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
