--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-redux-saga": "^1.2.1",
     "file-loader": "^6.0.0",
     "graphql": "^15.5.0",
+    "graphql-tag": "^2.12.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
     "nodemon": "^2.0.7",
@@ -57,6 +58,7 @@
     "apollo-client": "^2.6.10",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
