--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "apollo-client": "^2.6.10",
+    "apollo-link-context": "^1.0.20",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
