--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
+    "@svgr/webpack": "^5.5.0",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "apollo-server": "^2.24.1",
