--- a/package.json
+++ b/package.json
@@ -69,5 +69,6 @@
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.2.4"
-  }
+  },
+  "proxy": "https://protected-fortress-16665.herokuapp.com/"
 }
