--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index",
-    "start:dev": "webpack-dev-server",
-    "dev": "webpack -d --watch",
+    "start:dev": "webpack serve",
+    "dev": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@apollo/client": "^3.3.19",
-    "@babel/core": "^7.11.1",
-    "@babel/preset-env": "^7.11.0",
+    "@apollo/react-hooks": "^4.0.0",
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.10.4",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
@@ -22,8 +23,8 @@
     "@svgr/webpack": "^5.5.0",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
-    "apollo-server": "^2.24.1",
-    "babel-loader": "^8.1.0",
+    "apollo-link-context": "^1.0.20",
+    "apollo-server": "^3.6.7",
     "bcryptjs": "^2.4.3",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -40,7 +41,7 @@
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.10",
+    "mongoose": "^5.13.14",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
     "resolve-url-loader": "^3.1.1",
@@ -50,14 +51,14 @@
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
+    "terser": "^5.12.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^4.0.0",
-    "apollo-client": "^2.6.10",
-    "apollo-link-context": "^1.0.20",
+    "@apollo/client": "^3.5.10",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jwt-decode": "^3.1.2",
