--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@apollo/client": "^3.5.10",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "graphql-subscriptions": "^2.0.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
