--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index",
+    "start-dev": "NODE_ENV=development node server/index",
     "start:dev": "webpack serve",
     "dev": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
