--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "dev": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "10.x"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
