--- a/package.json
+++ b/package.json
@@ -16,11 +16,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@apollo/react-hooks": "^4.0.0",
-    "@babel/core": "^7.17.9",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.10.4",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
@@ -28,7 +23,6 @@
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "apollo-link-context": "^1.0.20",
-    "bcryptjs": "^2.4.3",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -41,7 +35,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-redux-saga": "^1.2.1",
     "file-loader": "^6.0.0",
-    "graphql-tag": "^2.12.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.14",
     "nodemon": "^2.0.7",
@@ -57,16 +50,22 @@
     "terser": "^5.12.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@apollo/react-hooks": "^4.0.0",
     "apollo-server": "^3.6.7",
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.10.4",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dayjs": "^1.11.2",
     "express": "^4.17.1",
     "graphql-subscriptions": "^2.0.0",
+    "graphql-tag": "^2.12.4",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "mongoose": "^5.12.13",
@@ -76,7 +75,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "webpack-dev-server": "^4.8.1"
   },
   "proxy": "https://protected-fortress-16665.herokuapp.com/"
 }
