--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "10.x"
+    "node": "11.x"
   },
   "author": "",
   "license": "ISC",
@@ -55,15 +55,16 @@
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@apollo/react-hooks": "^4.0.0",
-    "apollo-server": "^3.6.7",
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.10.4",
+    "apollo-server": "^3.6.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dayjs": "^1.11.2",
     "express": "^4.17.1",
+    "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-tag": "^2.12.4",
     "jwt-decode": "^3.1.2",
