--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dayjs": "^1.11.2",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
