--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "dayjs": "^1.11.2",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
+    "gapi-script": "^1.2.0",
+    "google-auth-library": "^8.7.0",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-tag": "^2.12.4",
@@ -74,11 +76,11 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
     "webpack-dev-server": "^4.8.1"
-  },
-  "proxy": "https://protected-fortress-16665.herokuapp.com/"
+  }
 }
