--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node server/index",
     "start-dev": "NODE_ENV=development node server/index",
-    "start:dev": "webpack serve",
-    "dev": "webpack --watch",
+    "serve": "webpack serve",
+    "dev": "webpack --devtool source-map --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
