--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start-dev": "NODE_ENV=development node server/index",
     "serve": "webpack serve",
     "dev": "webpack --devtool source-map",
+    "dev:dev": "webpack --devtool source-map --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
