--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app/index.jsx",
   "scripts": {
-    "start": "node server/index",
+    "start": "NODE_ENV=production node server/index",
     "start-dev": "NODE_ENV=development node server/index",
     "serve": "webpack serve",
     "dev": "webpack --devtool source-map",
