--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app/index.jsx",
   "scripts": {
     "start": "node server/index",
-    "start-dev": "node server/index",
+    "start-dev": "NODE_ENV=development node server/index",
     "serve": "webpack serve",
     "dev": "webpack --devtool source-map",
     "dev:dev": "webpack --devtool source-map --watch",
