--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "graphql-tag": "^2.12.4",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "lodash.clonedeep": "^4.5.0",
     "moment": "^2.29.1",
     "mongoose": "^5.12.13",
     "prop-types": "^15.7.2",
