--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server/index",
     "start-dev": "NODE_ENV=development nodemon server/index",
     "serve": "webpack serve",
+    "tailwind": "npx tailwindcss -i ./app/input.css -o ./public/output.css --watch",
     "dev": "webpack --devtool source-map",
     "dev:dev": "webpack --devtool source-map --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -47,6 +48,7 @@
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
+    "tailwindcss": "^3.4.16",
     "terser": "^5.12.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.72.0",
