--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "engines": {
     "node": "16.x"
   },
+  "resolutions": {
+    "apollo-client": "2.6.4"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -26,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "apollo-link-context": "^1.0.20",
+    "autoprefixer": "^10.4.20",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -39,6 +43,7 @@
     "eslint-plugin-redux-saga": "^1.2.1",
     "file-loader": "^6.0.0",
     "nodemon": "^2.0.7",
+    "postcss": "^8.4.49",
     "prettier": "^2.3.0",
     "react-is": "^18.1.0",
     "resolve-url-loader": "^3.1.1",
@@ -50,7 +55,6 @@
     "stylelint-processor-styled-components": "^1.10.0",
     "tailwindcss": "^3.4.16",
     "terser": "^5.12.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
