--- a/package.json
+++ b/package.json
@@ -54,9 +54,7 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
     "tailwindcss": "^3.4.16",
-    "terser": "^5.12.1",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "terser": "^5.12.1"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
@@ -88,6 +86,8 @@
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
-    "webpack-dev-server": "^4.8.1"
+    "webpack-dev-server": "^4.8.1",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
   }
 }
