--- a/package.json
+++ b/package.json
@@ -85,9 +85,10 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0",
+    "terser-webpack-plugin": "^5.3.11",
     "typescript": "^4.2.4",
-    "webpack-dev-server": "^4.8.1",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   }
 }
