--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.10.4",
     "apollo-server": "^3.6.7",
+    "babel-loader": "^9.2.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dayjs": "^1.11.2",
