--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
-    "@svgr/webpack": "^5.5.0",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "autoprefixer": "^10.4.20",
@@ -90,6 +89,7 @@
     "typescript": "^4.2.4",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
+    "webpack-dev-server": "^4.8.1",
+    "@svgr/webpack": "^5.5.0"
   }
 }
