--- a/package.json
+++ b/package.json
@@ -57,11 +57,12 @@
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@apollo/react-hooks": "^4.0.0",
-    "apollo-link-context": "^1.0.20",
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.10.4",
+    "@svgr/webpack": "^5.5.0",
+    "apollo-link-context": "^1.0.20",
     "apollo-server": "^3.6.7",
     "babel-loader": "^9.2.1",
     "bcryptjs": "^2.4.3",
@@ -84,12 +85,12 @@
     "react-google-login": "^5.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "style-loader": "^4.0.0",
     "styled-components": "^5.3.0",
     "terser-webpack-plugin": "^5.3.11",
     "typescript": "^4.2.4",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1",
-    "@svgr/webpack": "^5.5.0"
+    "webpack-dev-server": "^4.8.1"
   }
 }
