--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "mongoose": "^5.12.13",
+    "postcss-loader": "^8.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
