--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server/index",
     "start-dev": "NODE_ENV=development nodemon server/index",
-    "serve": "webpack serve",
+    "serve": "webpack-dev-server --mode development",
     "tailwind": "npx tailwindcss -i ./app/input.css -o ./public/output.css --watch",
     "dev": "webpack --devtool source-map",
     "dev:dev": "webpack --devtool source-map --watch",
@@ -27,6 +27,9 @@
     "@storybook/react": "^6.2.9",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
+    "babel-loader": "^8.4.1",
+    "css-loader": "^3.6.0",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -40,17 +43,27 @@
     "eslint-plugin-redux-saga": "^1.2.1",
     "file-loader": "^6.0.0",
     "nodemon": "^2.0.7",
+    "null-loader": "^4.0.1",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.49",
+    "postcss-loader": "^4.3.0",
     "prettier": "^2.3.0",
     "react-is": "^18.1.0",
     "resolve-url-loader": "^3.1.1",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
+    "style-loader": "^1.3.0",
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "terser": "^5.12.1"
+    "terser": "^5.12.1",
+    "terser-webpack-plugin": "^4.2.3",
+    "util": "^0.12.5",
+    "vm-browserify": "^1.1.2",
+    "webpack": "^4.47.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.3"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
@@ -62,12 +75,10 @@
     "@svgr/webpack": "^5.5.0",
     "apollo-link-context": "^1.0.20",
     "apollo-server": "^3.6.7",
-    "babel-loader": "^9.2.1",
+    "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "css-loader": "^7.1.2",
     "dayjs": "^1.11.2",
-    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "gapi-script": "^1.2.0",
     "google-auth-library": "^8.7.0",
@@ -78,21 +89,14 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "mongoose": "^5.12.13",
-    "postcss-loader": "^8.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "style-loader": "^4.0.0",
     "styled-components": "^5.3.0",
-    "terser-webpack-plugin": "^5.3.11",
-    "typescript": "^4.2.4",
     "tailwindcss": "^3.4.16",
-    "autoprefixer": "^10.4.20",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
+    "typescript": "^4.2.4"
   }
 }
