--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start-dev": "NODE_ENV=development nodemon server/index",
     "serve": "webpack-dev-server --mode development",
     "tailwind": "npx tailwindcss -i ./app/input.css -o ./public/output.css --watch",
-    "dev": "webpack --devtool source-map",
-    "dev:dev": "webpack --devtool source-map --watch",
+    "dev": "webpack --devtool source-map --watch",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "pretty": "prettier . -w"
   },
@@ -60,10 +60,7 @@
     "terser": "^5.12.1",
     "terser-webpack-plugin": "^4.2.3",
     "util": "^0.12.5",
-    "vm-browserify": "^1.1.2",
-    "webpack": "^4.47.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.3"
+    "vm-browserify": "^1.1.2"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
@@ -97,6 +94,9 @@
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0",
     "tailwindcss": "^3.4.16",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "webpack": "^4.47.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.3"
   }
 }
