--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -64,7 +65,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
-    "@apollo/react-hooks": "^4.0.0",
+    "@apollo/server": "^4.11.3",
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
@@ -75,6 +76,8 @@
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.2",
     "express": "^4.17.1",
     "gapi-script": "^1.2.0",
